Updated INETMANET 6LoWPAN wrapper code and INETMANET simulation example

--- a/4_examples/inetmanet-2.0/examples/wpan/sixlowpan/omnetpp.ini
+++ b/4_examples/inetmanet-2.0/examples/wpan/sixlowpan/omnetpp.ini
@@ -19,7 +19,7 @@ output-scalar-file-append 					= false
 ##############################################################################
 debug-on-errors 					= true
 **.coreDebug						= false
-**.debug							= false
+**.debug							= true
 #**.app.debug						= false					
 #**.battery.debug					= false
 #**.net.debug						= false
@@ -81,7 +81,7 @@ debug-on-errors 					= true
 ##############################################################################
 **.lrwpan.ifqType = "DropTailQueue"
 **.ifq.frameCapacity = 50
-**.macAckWaitDuration = 0.001s
+**.macAckWaitDuration = 0.005s
 
 ##############################################################################
 # Parameters for PHY layer #
@@ -148,21 +148,21 @@ network = NetTwoNodes
 description= "Network with 2x 6LoWPAN nodes and a router"
 
 
-**.numPingApps = 2
+**.numPingApps = 1
 **.printPing = true
 **.pingApp[*].typename="PingApp"
 **.lrwpanHost1.pingApp[*].srcAddr = "lrwpanHost1"
 **.lrwpanHost1.pingApp[0].destAddr = "lrwpanHost2"
-**.lrwpanHost1.pingApp[0].sendInterval = 2s
+**.lrwpanHost1.pingApp[0].sendInterval = 1s
 **.lrwpanHost1.pingApp[0].startTime = 4s
-**.lrwpanHost1.pingApp[1].destAddr = "lrwpanHost2(ipv6)"
-**.lrwpanHost1.pingApp[1].sendInterval = 2s
-**.lrwpanHost1.pingApp[1].startTime = 5s
+#**.lrwpanHost1.pingApp[1].destAddr = "lrwpanHost2(ipv6)"
+#**.lrwpanHost1.pingApp[1].sendInterval = 2s
+#**.lrwpanHost1.pingApp[1].startTime = 5s
 ### when using manual addresses for INETMANET, either set 48-Bit addresses 
-### or specify 64-Bit EUI addresses with FE-FF at Bytes 3 and 4 (refer to the examples)
-#**.lrwpanHost1.lrwpan.mac.address  = "0A:AA:00:FE:FF:00:01:11"
-#**.lrwpanHost2.lrwpan.mac.address  = "0A:AA:00:FE:FF:00:02:22"
-#**.hybridRouter.lrwpan.mac.address = "0A:AA:00:FE:FF:00:03:33"
+### or specify 64-Bit EUI addresses with FF-FE at Bytes 3 and 4 (refer to the examples)
+#**.lrwpanHost1.lrwpan.mac.address  = "00:00:00:FF:FE:00:01:11"
+#**.lrwpanHost2.lrwpan.mac.address  = "00:00:00:FF:FE:00:02:22"
+#**.hybridRouter.lrwpan.mac.address = "00:00:00:FF:FE:00:03:33"
 
 # Layouting
 **.lrwpanHost1.mobility.initialX		 = 175m
@@ -182,9 +182,10 @@ description= "Network with 4x 6LoWPAN nodes, a router and an Ethernet node"
 **.numPingApps = 1
 **.printPing = true
 **.pingApp[*].typename="PingApp"
+**.lrwpanHost1.pingApp[*].srcAddr = "lrwpanHost1"
 **.lrwpanHost1.pingApp[0].destAddr = "wiredHost"
 
-**.lrwpanHost1.pingApp[0].sendInterval = 250ms
+**.lrwpanHost1.pingApp[0].sendInterval = 500ms
 **.lrwpanHost1.pingApp[0].startTime = 5s
 
 # Layouting
