--- a/3_6lowpan_wrapper/inetmanet-2.0/src/networklayer/ipv6/_6lowpan/Makefile.6lowpan
+++ b/3_6lowpan_wrapper/inetmanet-2.0/src/networklayer/ipv6/_6lowpan/Makefile.6lowpan
@@ -1,33 +1,28 @@
 # Adjust the following two paths to your actual configuration / installation
-CONTIKI_PATH = /home/user/git/contiki-2.6
+CONTIKI_PATH = $(HOME)/git/contiki-2.6
 
-# Adjust the name of the Contiki library that you compiled before using this INET module
+# Adjust the name of the Contiki library that you compiled before using this INET/INETMANET module
 CONTIKI_LIB = /examples/hello-world/contiki-omnetpp.a
 
-LIBS = -Wl,-wrap,tcpip_input $(CONTIKI_PATH)$(CONTIKI_LIB) 
+### Use with Contiki version <= 2.6 or older
+LIBS = -Wl,-wrap,tcpip_input $(CONTIKI_PATH)$(CONTIKI_LIB)
 
+#####
 ## If you experience "unresolved include" errors when building INET/INETMANET, the problem
-## might be that Contiki creates a static library with various unresolved includes
-## disable the LIBS line above and enable the EXTRA_OBJS line below for a quick (but bad) fix
-#EXTRA_OBJS = -Wl,-wrap,tcpip_input $(CONTIKI_PATH)$(CONTIKI_LIB) 
+## is that Contiki just archives all object files and later links against the archive file
+## OMNeT includes static libraries with --whole-archive and therefore also includes various
+## undefined symbols that we do not use / need
+## therefore disable LIBS line above and enable the EXTRA_OBJS line below for a quick fix
+#####
 
+### Use with Contiki version > 2.6 or the Github version
+#EXTRA_OBJS = -Wl,-wrap,tcpip_input $(CONTIKI_PATH)$(CONTIKI_LIB)
 
 INCLUDE_PATH += \
-	-I$(CONTIKI_PATH)/core \
-	-I$(CONTIKI_PATH)/core/net \
-	-I$(CONTIKI_PATH)/platform/omnetpp \
-	-I$(CONTIKI_PATH)/platform/omnetpp/net
-###
-###	Additional include paths - not needed at the moment
-###
-##	-I$(CONTIKI_PATH)/core/lib \
-##	-I$(CONTIKI_PATH)/core/net \
-##	-I$(CONTIKI_PATH)/core/net/mac \
-##	-I$(CONTIKI_PATH)/core/net/rime \
-##	-I$(CONTIKI_PATH)/core/net/rpl \
-##	-I$(CONTIKI_PATH)/core/dev \
-##	-I$(CONTIKI_PATH)/core/sys \
-##	-I$(CONTIKI_PATH)/platform/omnetpp \
-##	-I$(CONTIKI_PATH)/platform/omnetpp/dev \
-##	-I$(CONTIKI_PATH)/platform/omnetpp/net
-###
+-I$(CONTIKI_PATH)/core \
+-I$(CONTIKI_PATH)/core/sys \
+-I$(CONTIKI_PATH)/core/net \
+-I$(CONTIKI_PATH)/core/net/mac \
+-I$(CONTIKI_PATH)/core/net/rime \
+-I$(CONTIKI_PATH)/platform/omnetpp \
+-I$(CONTIKI_PATH)/platform/omnetpp/net
